feat: Rebranding from FlysSeats to SitFly across the application

--- a/flyseats-frontend/src/app/app.component.html
+++ b/flyseats-frontend/src/app/app.component.html
@@ -7,7 +7,7 @@
         <mat-icon>flight</mat-icon>
       </div>
       <span class="logo-text">
-        <span class="logo-primary">Flys</span><span class="logo-accent">Seats</span>
+        <span class="logo-primary">Sit</span><span class="logo-accent">Fly</span>
       </span>
     </div>
 
@@ -70,7 +70,7 @@
         <mat-icon>flight</mat-icon>
       </div>
       <span class="logo-text">
-        <span class="logo-primary">Flys</span><span class="logo-accent">Seats</span>
+        <span class="logo-primary">Sit</span><span class="logo-accent">Fly</span>
       </span>
     </div>
     <button mat-icon-button (click)="closeMobileMenu()">
