--- a/flyseats-frontend/src/app/app.component.scss
+++ b/flyseats-frontend/src/app/app.component.scss
@@ -510,7 +510,7 @@
 /* Main Content */
 .main-content {
   padding-top: 72px;
-  min-height: 100vh;
+  min-height: calc(100vh - 72px);
 }
 
 /* Responsive Utilities */
